# discord-fb-video-preview-bot

./: Cargo.toml  README.md
src/: main.rs
src/events/: mod.rs
