[package]
name = "facebook-video-preview-discord-bot"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# incremental = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
regex = "1.9.6"
scraper = "0.19.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.117"
base64 = "0.22.1"
url = "2.5.4"
